# vediocapture

./: CMakeLists.txt  CameraStreamer.cpp  CameraStreamer.hpp  main.cpp  run.sh  sourcepath
